force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <description>A &quot;Property&quot; object represents a physical real estate asset, such as a house, apartment, commercial space, or land. It serves as a fundamental data structure in real estate databases and platforms. A typical Property object includes essential attributes, such as property type, location, size, and associated features, providing comprehensive information for buyers, renters, and real estate professionals. This object plays a central role in real estate listings and transactions, facilitating property search, evaluation, and decision-making.</description>
    <label>Property</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>