force-app/main/default/objects/Property__c/fields/Number_of_units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_units__c</fullName>
    <label>Number of units</label>
    <summaryForeignKey>Listings__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>