force-app/main/default/objects/Property__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <description>This picklist  for the different type properties</description>
    <inlineHelpText>Please Select the the Property Type</inlineHelpText>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Multi Family</fullName>
            </value>
            <value>
                <fullName>Self Storage</fullName>
            </value>
            <value>
                <fullName>Single family residence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>